fix UI issues in spacing

--- a/src/styles/components/AboutSection.scss
+++ b/src/styles/components/AboutSection.scss
@@ -10,7 +10,7 @@
         text-align: center;
     }
     p{
-        margin-bottom: $spacing-medium;
+        margin: $spacing-medium 0;
         max-width: 380px;
         text-align: center;
     }
