--- a/src/styles/components/ProjectsSection.scss
+++ b/src/styles/components/ProjectsSection.scss
@@ -13,6 +13,7 @@
         max-width: 380px;
         text-align: center;
         margin-bottom: $spacing-large;
+        margin-top: $spacing-medium;
     }
     ul{
         list-style: none;
